# LearnRenderProject

./: .gitignore  README.md
.cursor/skills/run-opengl-demo/: SKILL.md
demos/: ndc_comparison.html
demos/01_hello_triangle/: CMakeLists.txt  README.md
demos/01_hello_triangle/shaders/: framework_triangle.vert
demos/01_hello_triangle/src/: framework_triangles.cpp  framework_two_triangles.cpp  main.cpp  two_triangles.cpp  unity_style_triangles.cpp
demos/01_py_demo/: framework_two_triangles_demo.py  one.py  run.sh
demos/02_vertex_data/: CMakeLists.txt  README.md  run.sh
demos/02_vertex_data/src/: main.cpp
demos/03_vbo/: CMakeLists.txt  README.md  run.sh
demos/03_vbo/src/: main.cpp
demos/04_vao/: CMakeLists.txt  README.md  run.sh
demos/04_vao/src/: main.cpp  vao_color_attributes.cpp  vao_split_buffers.cpp
demos/05_shader_attributes/: CMakeLists.txt  README.md  run.sh
demos/05_shader_attributes/src/: main.cpp
demos/06_uniform/: CMakeLists.txt  README.md  run.sh
demos/06_uniform/src/: main.cpp
demos/Framework/: README.md
demos/Framework/include/: Framework.hpp
demos/Framework/python_binding/: CMakeLists.txt  README.md  bindings.cpp
demos/Framework/src/: Framework.cpp
notes/: README.md  learning_todo.md  pbr_cheatsheet.md  pbr_resources.md
notes/recaps/: README.md
notes/recaps/day01_hello_triangle/: README.md
notes/recaps/day02_vertex_data/: README.md
notes/recaps/day03_vbo/: README.md
notes/recaps/day22_pbr_intro/: README.md
notes/recaps/day23_albedo/: README.md
notes/recaps/day24_metallic/: README.md
notes/recaps/day25_roughness/: README.md
notes/recaps/day26_energy_conservation/: README.md
notes/recaps/day27_disney_brdf/: README.md
notes/recaps/day28_cook_torrance/: README.md
notes/recaps/day29_irradiance/: README.md
notes/recaps/day30_cosine_weight/: README.md
notes/recaps/day31_irradiance_map/: README.md
notes/recaps/pbr_review_week/: README.md
notes/recaps/pbr_review_week/r1_pbr_stability/: README.md
notes/recaps/pbr_review_week/r2_material_parameters/: README.md
notes/recaps/pbr_review_week/r3_brdf_structure/: README.md
notes/recaps/pbr_review_week/r4_hemisphere_integral/: README.md
notes/recaps/pbr_review_week/r5_diffuse_ibl/: README.md
notes/resources/siggraph2012_pbr_shading_course/: 02_hoffman_physics_math_notebook.nb  03_mcauley_farcry3_calibration_tool.avi  READING_PLAN.md  README.md
notes/resources/siggraph2012_pbr_shading_course/feynman_notes/: 01_why_pbr_matters.md  02_light_surface_interaction.md  03_material_calibration.md  04_beyond_blinn.md
notes/roadmap/: README.md  opengl-learning-mindmap.md
scripts/: README.md  cmake-run.sh
unity_style/: README.md
unity_style/include/: UnityStyle.hpp
unity_style/src/: UnityStyle.cpp
